# sizematters-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: actors.rs  data.rs  main.rs
src/actors/: client.rs  messages.rs  room.rs  user.rs
src/actors/room/: manager.rs  room_actor.rs  room_manager.rs
src/actors/room/room_actor/: join_room.rs  leave_room.rs  vote.rs
