[package]
name = "sizematters-server"
version = "0.1.0"
authors = ["Andre Onuki <otanuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for actix web
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"

uuid = { version = "0.4", features = ["v4"] }

md5 = "0.7.0"

regex = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
