[package]
name = "sizematters-server"
version = "0.1.0"
authors = ["Andre Onuki <otanuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for actix web
actix = "0.13"
actix-web = "4.11"
actix-web-actors = "4.1"
env_logger = "0.11"
bytestring = "1.4.0"

rand = "0.9"

uuid = { version = "0.4", features = ["v4"] }

md5 = "0.7.0"

regex = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
